--- a/fluento_app/pubspec.yaml
+++ b/fluento_app/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cloud_firestore: ^2.5.2
   firebase_storage: ^10.0.3
   auto_size_text_pk: ^3.0.0
+  font_awesome_flutter: ^9.1.0
+
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
