--- a/fluento_app/pubspec.yaml
+++ b/fluento_app/pubspec.yaml
@@ -35,6 +35,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/beginnerImages/numbers/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
